# RISC-V-Simulator

./: CMakeLists.txt  LICENSE  README.md
sim/: common.h  decoder.cpp  decoder.h  elf_reader.cpp  elf_reader.h  exec_inst.cpp  exec_inst.h  ir.cpp  ir.h  isa_desc.cpp  isa_desc.h  jit.cpp  jit.h  main.cpp  mmu.h  options.cpp  options.h  options_list.h  sim.cpp  sim.h  stats.cpp  stats.h  stats_list.h  syscall.cpp  syscall.h  translate_inst.cpp  translate_inst.h
tests/dhrystone/: dhrystone  dhrystone.s
tests/fib/: a.out  main.c  main.s
tests/printf/: main.c  printf  printf.s
tests/queens/: 8-queens.c  queens-no-opt  queens-no-opt.s  queens-opt  queens-opt.s
